--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .spinner-page-center {
- position: fixed;
- top: 50%;   
- left: 50%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+}
+
+* {
+  font-family: "Roboto", "Helvetica Neue", sans-serif;
 }
